home-page comics

--- a/inte-local/index.html
+++ b/inte-local/index.html
@@ -22,30 +22,24 @@
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Media Ruby</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="">Les Films</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="">Les Livres</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="">Les musique</a>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
-                    </li>
+                    <!-- <li>
+                        <a class="page-scroll" href=""></a>
+                    </li> -->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -55,17 +49,30 @@
 
 		<header>
 			<div class="header-content">
-				Home page
+				<div class="header-content-inner">Home page</div>
 			</div>
 		</header>
 
+		<section>
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-2"></div>
+					<div class="col-lg-1 text-right">Top Livre</div>
+					<div class="col-lg-7">
+						<div style="height:1px; width:100%; background-color:grey; "></div>
+					</div>
+					<div class="col-lg-2"></div>
+				</div>
+			</div>
+		</section>
+
 		<section class="no-padding">
 			<div class="container-fluid">
-				<div class="row no-gutter">
+				<div class="row">
 					
 					<div class="col-lg-4 col-sm-6">
 						<a href="#" class="portfolio-box">
-							<img src="public/img/portfolio/1.jpg" class="img-responsive" alt="">
+							<img src="public/img/comics/1.jpg" class="img-responsive img-comics" alt="">
 							<div class="portfolio-box-caption">
 								<div class="portfolio-box-caption-content">
 									<div class="project-category text-faded">
@@ -81,7 +88,7 @@
 					
 					<div class="col-lg-4 col-sm-6">
 						<a href="#" class="portfolio-box">
-							<img src="public/img/portfolio/2.jpg" class="img-responsive" alt="">
+							<img src="public/img/comics/2.jpg" class="img-responsive img-comics" alt="">
 							<div class="portfolio-box-caption">
 								<div class="portfolio-box-caption-content">
 									<div class="project-category text-faded">
@@ -97,7 +104,7 @@
 
 					<div class="col-lg-4 col-sm-6">
 						<a href="#" class="portfolio-box">
-							<img src="public/img/portfolio/3.jpg" class="img-responsive" alt="">
+							<img src="public/img/comics/3.jpg" class="img-responsive img-comics" alt="">
 							<div class="portfolio-box-caption">
 								<div class="portfolio-box-caption-content">
 									<div class="project-category text-faded">
@@ -113,7 +120,7 @@
 
 					<div class="col-lg-4 col-sm-6">
 						<a href="#" class="portfolio-box">
-							<img src="public/img/portfolio/4.jpg" class="img-responsive" alt="">
+							<img src="public/img/comics/4.jpg" class="img-responsive img-comics" alt="">
 							<div class="portfolio-box-caption">
 								<div class="portfolio-box-caption-content">
 									<div class="project-category text-faded">
@@ -129,7 +136,7 @@
 
 					<div class="col-lg-4 col-sm-6">
 						<a href="#" class="portfolio-box">
-							<img src="public/img/portfolio/4.jpg" class="img-responsive" alt="">
+							<img src="public/img/comics/5.jpg" class="img-responsive img-comics" alt="">
 							<div class="portfolio-box-caption">
 								<div class="portfolio-box-caption-content">
 									<div class="project-category text-faded">
@@ -145,7 +152,7 @@
 
 					<div class="col-lg-4 col-sm-6">
 						<a href="#" class="portfolio-box">
-							<img src="public/img/portfolio/4.jpg" class="img-responsive" alt="">
+							<img src="public/img/comics/6.jpg" class="img-responsive img-comics" alt="">
 							<div class="portfolio-box-caption">
 								<div class="portfolio-box-caption-content">
 									<div class="project-category text-faded">
