--- a/inte-local/index.html
+++ b/inte-local/index.html
@@ -284,6 +284,124 @@
 			</div>
 		</section>
 
+		<section class="top-list">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-1"></div>
+					<div class="col-lg-2 text-center" style="font-weight: 500; font-size: 30px;">
+						Top Musiques
+					</div>
+					<div class="col-lg-8">
+						<div style="height:2px; width:100%; background-color:grey; margin-top:40px;"></div>
+					</div>
+					<!-- <div class="col-lg-1"></div> -->
+				</div>
+			</div>
+		</section>
+
+		<section class="no-padding">
+			<div class="container-fluid">
+				<div class="row">
+					
+					<div class="col-lg-4 col-sm-6">
+						<a href="#lien_ajout" class="product-box">
+							<img src="public/img/musics/1.jpg" class="img-responsive img-product" alt="">
+							<div class="product-box-focus">
+								<div class="product-box-focus-content">
+									<div class="project-category text-faded">
+										Ajouter
+									</div>
+									<div class="project-name">
+										Arch Enemy <br> War Eternal
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
+					
+					<div class="col-lg-4 col-sm-6">
+						<a href="#lien_ajout" class="product-box">
+							<img src="public/img/musics/2.jpg" class="img-responsive img-product" alt="">
+							<div class="product-box-focus">
+								<div class="product-box-focus-content">
+									<div class="project-category text-faded">
+										Ajouter
+									</div>
+									<div class="project-name">
+										Eluveitie <br> Origins
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
+
+					<div class="col-lg-4 col-sm-6">
+						<a href="#lien_ajout" class="product-box">
+							<img src="public/img/musics/3.jpg" class="img-responsive img-product" alt="">
+							<div class="product-box-focus">
+								<div class="product-box-focus-content">
+									<div class="project-category text-faded">
+										Ajouter
+									</div>
+									<div class="project-name">
+										Gorillaz <br> Demons Days
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
+
+					<div class="col-lg-4 col-sm-6">
+						<a href="#lien_ajout" class="product-box">
+							<img src="public/img/musics/4.jpg" class="img-responsive img-product" alt="">
+							<div class="product-box-focus">
+								<div class="product-box-focus-content">
+									<div class="project-category text-faded">
+										Ajouter
+									</div>
+									<div class="project-name">
+										In Flames <br> Soundtrack to your escape
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
+
+					<div class="col-lg-4 col-sm-6">
+						<a href="#lien_ajout" class="product-box">
+							<img src="public/img/musics/5.jpg" class="img-responsive img-product" alt="">
+							<div class="product-box-focus">
+								<div class="product-box-focus-content">
+									<div class="project-category text-faded">
+										Ajouter
+									</div>
+									<div class="project-name">
+										Allegaon <br> Elements of the infinite
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
+
+					<div class="col-lg-4 col-sm-6">
+						<a href="#lien_ajout" class="product-box">
+							<img src="public/img/musics/6.jpg" class="img-responsive img-product" alt="">
+							<div class="product-box-focus">
+								<div class="product-box-focus-content">
+									<div class="project-category text-faded">
+										Ajouter
+									</div>
+									<div class="project-name">
+										Supertramp <br> Breakfast in America
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
+				</div>
+			</div>
+		</section>
+
     <script src="public/js/jquery.js"></script>
     <script src="public/js/bootstrap.min.js"></script>
 
